--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,10 @@ hs_err_pid*
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
 
-/*.iml
+#/*.iml
 
 ## Directory-based project format:
-.idea/
+#.idea/
 # if you remove the above rule, at least ignore the follwing:
 
 # User-specific stuff:
