--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.ear
 
@@ -14,7 +14,7 @@ hs_err_pid*
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm
 
-#/*.iml
+/*.iml
 
 ## Directory-based project format:
 #.idea/
